Can GET meeting information

--- a/WebContent/stevetest.html
+++ b/WebContent/stevetest.html
@@ -49,8 +49,18 @@
 	<p>
 		<a href="./rest/user/staff/asdfasfdasdf/staff">Get staff user</a> (YOU MUST ACCESS ANOTHER LINK FIRST)
 	</p>
-	
+	<br>
+	<h3>Meeting</h3>
 	<p>
+		
+		<a href="./rest/planmeeting/staff/asdfasfdasdf/coolbeans">Get 'coolbeans' meeting as 'staff'</a> <br>
+		<a href="./rest/planmeeting/upcoming/staff/asdfasfdasdf">Get upcoming meetings as 'staff'</a> <br>
+		
+	</p>
+	<br>
+	<h3>Personal Plan</h3>
+	<p>
+		
 		<a href="./rest/personalplan/staff/asdfasfdasdf/coolbeans">Get 'coolbeans' whole personal plan as 'staff'</a> <br>
 		<a href="./rest/personalplan/planning/staff/asdfasfdasdf/coolbeans">Get 'coolbeans' planning as 'staff'</a> <br>
 		<a href="./rest/personalplan/communication/staff/asdfasfdasdf/coolbeans">Get 'coolbeans' communication as 'staff'</a> <br>
