Can GET risk assessment
Individual risk assessment.

Test it on stevetest.html

--- a/WebContent/stevetest.html
+++ b/WebContent/stevetest.html
@@ -50,6 +50,13 @@
 		<a href="./rest/user/staff/asdfasfdasdf/staff">Get staff user</a> (YOU MUST ACCESS ANOTHER LINK FIRST)
 	</p>
 	<br>
+	<h3>Risk</h3>
+	<p>
+		
+		<a href="./rest/risk/staff/asdfasfdasdf/1">Get risk 1 using 'staff'</a> <br>
+		
+	</p>
+	<br>
 	<h3>Meeting</h3>
 	<p>
 		
