Can now get all client-specific risks in a list

--- a/WebContent/stevetest.html
+++ b/WebContent/stevetest.html
@@ -54,6 +54,7 @@
 	<p>
 		
 		<a href="./rest/risk/staff/asdfasfdasdf/1">Get risk 1 using 'staff'</a> <br>
+		<a href="./rest/risk/clientrisks/staff/asdfasfdasdf/coolbeans">Get risks of user 'coolbeans' as 'staff'</a> <br>
 		
 	</p>
 	<br>
