Can now request all client usernames and real names

--- a/WebContent/stevetest.html
+++ b/WebContent/stevetest.html
@@ -49,6 +49,9 @@
 	<p>
 		<a href="./rest/user/staff/asdfasfdasdf/staff">Get staff user</a> (YOU MUST ACCESS ANOTHER LINK FIRST)
 	</p>
+	<p>
+		<a href="./rest/user/getallclients/staff/asdfasfdasdf">Get all clients</a> (YOU MUST ACCESS ANOTHER LINK FIRST)
+	</p>
 	<br>
 	<h3>Risk</h3>
 	<p>
