--- a/WebContent/riskassessment/risk.html
+++ b/WebContent/riskassessment/risk.html
@@ -96,6 +96,7 @@ $(document).ready(function(){
 		risk.user_id = $.cookie("client_id");
 		if($.cookie("risk_id")) {
 			risk.risk_id = $.cookie("risk_id");
+			alert("object about to be sent has risk_id of " + risk.risk_id);
 		}
 		
 		
