--- a/WebContent/personalplan/client.html
+++ b/WebContent/personalplan/client.html
@@ -1,6 +1,7 @@
+	<h2 class='instructions'>2) Edit client details</h2>
 	<button id='PageNavPrevClient' class='prevButton' >Previous</button>	
 	<button id='PageNavNextClient' class='nextButton' >Next</button>
-	<button id='PageNavSubmitBClient' class='submitButton'>Submit</button>
+	<button id='PageNavSubmitBClient' class='submitButton'>Submit</button> <h2 class='instructions hidden' >3) Save</h2>
 	
 	<div id='detailsD'>
 		<h4>Client Details</h4>
