--- a/WebContent/personalplan/communication.html
+++ b/WebContent/personalplan/communication.html
@@ -1,4 +1,5 @@
-	<button id='PageNavSubmitBComm' >Submit</button>
+	<h2 class='instructions'>8) Edit communication details</h2>
+	<button id='PageNavSubmitBComm' >Submit</button><h2 class='instructions' >9) Save</h2>
 	
 	<div id='commD'>
 		<h4>Communication</h4>
