--- a/WebContent/personalplan/education.html
+++ b/WebContent/personalplan/education.html
@@ -1,6 +1,7 @@
+	<h2 class='instructions'>10) Edit education & employment details</h2>
 	<button id='PageNavPrevEdu' class='prevButton' >Previous</button>	
 	<button id='PageNavNextEdu' class='nextButton'  >Next</button>
-	<button id='PageNavSubmitBEdu' class='submitButton' >Submit</button>
+	<button id='PageNavSubmitBEdu' class='submitButton' >Submit</button><h2 class='instructions hidden' >11) Save</h2>
 	
 	<div id='educationD2'>
 		<h4>Education</h4>
