--- a/WebContent/personalplan/health.html
+++ b/WebContent/personalplan/health.html
@@ -1,6 +1,7 @@
+	<h2 class='instructions'>4) Edit health details</h2>
 	<button id='PageNavPrevHealth' class='prevButton' >Previous</button>	
 	<button id='PageNavNextHealth' class='nextButton' >Next</button>
-	<button id='PageNavSubmitBHealth' class='submitButton'>Submit</button>
+	<button id='PageNavSubmitBHealth' class='submitButton'>Submit</button><h2 class='instructions hidden' >5) Save</h2>
 	
 	<div id='healthD2'>
 		<h4>Health Details</h4>
