--- a/WebContent/personalplan/planning.html
+++ b/WebContent/personalplan/planning.html
@@ -1,6 +1,7 @@
+	<h2 class='instructions'>12) Edit planning details</h2>
 	<button id='PageNavPrevPlan' class='prevButton' >Previous</button>	
 	<button id='PageNavNextPlan' class='nextButton' >Next</button>
-	<button id='PageNavSubmitBPlan' class='submitButton' >Submit</button>
+	<button id='PageNavSubmitBPlan' class='submitButton' >Submit</button><h2 class='instructions hidden' >13) Save</h2>
 	
 	<div id='holidayD'>
 		<h4>Holiday Details</h4>
