--- a/WebContent/personalplan/support.html
+++ b/WebContent/personalplan/support.html
@@ -1,6 +1,7 @@
+	<h2 class='instructions'>6) Edit support required details</h2>
 	<button id='PageNavPrevSupport' class='prevButton' >Previous</button>	
 	<button id='PageNavNextSupport' class='nextButton' >Next</button>
-	<button id='PageNavSubmitBSupport' class='submitButton'>Submit</button>
+	<button id='PageNavSubmitBSupport' class='submitButton'>Submit</button> <h2 class='instructions hidden' >7) Save</h2>
 	
 	<div id='supportReqD'>
 	<h4>Support Required</h4>
