--- a/WebContent/riskassessment/risk.html
+++ b/WebContent/riskassessment/risk.html
@@ -1,7 +1,7 @@
 <h2 class='instructions'>3) Edit</h2>
-<label class='title'>Service User Name</label><span id='serviceUsername'></span>
+<label class='riskTitle'>Service User Name</label><span id='serviceUsername'></span>
 <br />
-<label class='title'>Service User ID</label><span id='serviceID'></span>
+<label class='riskTitle'>Service User ID</label><span id='serviceID'></span>
 <br />
 <label class='bold inline'>Service: </label>
 <input type='text' id='serviceT' class='inline'/>
@@ -72,6 +72,10 @@
 <script type='text/javascript'>
 $(document).ready(function(){
 	//page load
+	
+	
+	
+	
 	
 	
 	//BINDS
