major css update

--- a/WebContent/personalplan/health.html
+++ b/WebContent/personalplan/health.html
@@ -217,6 +217,7 @@ DROPDOWN HERE + INLINE FORMATTING
 		//click on the next button
 		$("#PageNavNextHealth").click(function(){
 			PageNavigation('next', 'health', this);
+			$(".medCon").html($("#medConditionT").val());
 		});
 		
 		
